<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="7dp">


            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="15dp"
                android:inputType="textPersonName"
                android:hint="@string/insertName"
                android:drawableEnd="@drawable/ic_baseline_person_24_icon"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/userSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="15dp"
                android:inputType="textPersonName"
                android:hint="@string/insertSurname"
                android:drawableEnd="@drawable/ic_baseline_person_24_icon"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/userNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="15dp"
                android:inputType="textPersonName"
                android:hint="@string/insertNickname"
                android:drawableEnd="@drawable/ic_baseline_person_24_icon"
                android:importantForAutofill="no" />


            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/insertEmail"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/insertPass"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/userPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/confirmPass"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/buttonRegistration"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/registration"
                android:background="@drawable/shape_background_button"/>

            <TextView
                android:id="@+id/switchToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:focusable="true"
                android:textColor="#1D7854"
                android:ems="10"
                android:text="@string/regtolog"
                android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>