<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:text="@string/addNewRequest"
                android:id="@+id/Title"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:background="#1D7854"
                android:padding="4dp"
                android:elevation="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/nameRequest"
                android:hint="@string/insertRequest"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:background="@drawable/shape_background"
                android:padding="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/commentRequest"
                android:hint="@string/insertComment"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:background="@drawable/shape_background"
                android:padding="15dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/layoutList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                >

                <EditText
                    android:id="@+id/newItem"
                    android:hint="insert new item"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_background"
                    android:padding="15dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"/>

                <ImageView
                    android:id="@+id/addItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="7dp"
                    android:src="@drawable/ic_baseline_add_circle_24" />

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="35dp"

                android:visibility="gone"/>

            <EditText
                android:id="@+id/expiration"
                android:hint="expiration"
                android:textColor="@color/black"
                android:background="@drawable/shape_background"
                android:padding="15dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:focusableInTouchMode="false"
                android:visibility="gone"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="15dp"
                    >

                    <RadioButton
                        android:id="@+id/toDo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="To-Do"
                        android:textStyle="bold"
                        android:layout_marginRight="3dp"
                        android:textSize="15dp"
                        android:checked="true"
                        android:buttonTint="#1D7854" />

                    <RadioButton
                        android:id="@+id/toBuy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="To-Buy"
                        android:textSize="15dp"

                        android:textStyle="bold"
                        android:buttonTint="#1D7854"/>

                </RadioGroup>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/isList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:buttonTint="#1D7854"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/list" />
                <CheckBox
                    android:id="@+id/hasExpiration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:buttonTint="#1D7854"
                    android:layout_marginRight="10dp"
                    android:text="@string/expiration" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>